// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col renders correctly 1`] = `
.c1 {
  width: 100%;
  min-height: 1px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c0 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c0 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c0 small {
  font-size: 95%;
  font-weight: 300;
}

<div
  class="c0 c1"
>
  
</div>
`;

exports[`MultiCol renders correctly 1`] = `
Array [
  .c1 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f5f6f7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c0 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c0 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c0 small {
  font-size: 95%;
  font-weight: 300;
}

@media (min-width:62em) {
  .c1 {
    -webkit-flex: 0 0 30%;
    -ms-flex: 0 0 30%;
    flex: 0 0 30%;
    max-width: 30%;
  }
}

<div
    class="c0 c1"
>
    <small>
        foo
    </small>
    <span>
        bar
    </span>
</div>,
  .c1 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c0 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c0 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c0 small {
  font-size: 95%;
  font-weight: 300;
}

@media (min-width:62em) {
  .c1 {
    -webkit-flex: 0 0 30%;
    -ms-flex: 0 0 30%;
    flex: 0 0 30%;
    max-width: 30%;
  }
}

<div
    class="c0 c1"
>
    <small>
        bar
    </small>
    <span>
        foo
    </span>
</div>,
]
`;
